Avance4/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> START EDJO VAR_ID crea_primer_cuadruplo crea_funcion_global SEMICOLON Vars funciones Main
Rule 2     crea_primer_cuadruplo -> <empty>
Rule 3     crea_funcion_global -> <empty>
Rule 4     Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars
Rule 5     Vars -> Tipo VAR_ID SLBRACKET VAR_INT push_int_PilaOperandos SRBRACKET agrega_limites_arreglo agrega_arr_funcion SEMICOLON Vars
Rule 6     Vars -> <empty>
Rule 7     agrega_limites_arreglo -> <empty>
Rule 8     agrega_arr_funcion -> <empty>
Rule 9     Tipo -> INT
Rule 10    Tipo -> DECIMAL
Rule 11    Tipo -> STRING
Rule 12    Tipo -> CHAR
Rule 13    Tipo -> BOOL
Rule 14    mas_vars -> COMMA VAR_ID mas_vars
Rule 15    mas_vars -> <empty>
Rule 16    agrega_var_funcion -> <empty>
Rule 17    Asignacion -> VAR_ID push_var_PilaOperandos pos_arreglo ASSIGN push_operador_PilaOperadores ExpI SEMICOLON resuelve_asignacion
Rule 18    push_var_PilaOperandos -> <empty>
Rule 19    push_operador_PilaOperadores -> <empty>
Rule 20    resuelve_asignacion -> <empty>
Rule 21    ExpI -> ExpK resuelve_operadores_relacionales
Rule 22    ExpI -> ExpK Operandos push_operador_PilaOperadores ExpK resuelve_operadores_relacionales
Rule 23    Operandos -> LT
Rule 24    Operandos -> GT
Rule 25    Operandos -> NE
Rule 26    Operandos -> LE
Rule 27    Operandos -> GE
Rule 28    Operandos -> EQ
Rule 29    resuelve_operadores_relacionales -> <empty>
Rule 30    ExpK -> ExpT resuelve_termino
Rule 31    ExpK -> ExpT resuelve_termino pos_SUMRES push_operador_PilaOperadores ExpK
Rule 32    resuelve_termino -> <empty>
Rule 33    pos_SUMRES -> PLUS
Rule 34    pos_SUMRES -> MINUS
Rule 35    ExpT -> ExpF resuelve_factor
Rule 36    ExpT -> ExpF resuelve_factor pos_MULTDIV push_operador_PilaOperadores ExpT
Rule 37    resuelve_factor -> <empty>
Rule 38    pos_MULTDIV -> MULT
Rule 39    pos_MULTDIV -> DIV
Rule 40    ExpF -> VAR_CTE
Rule 41    ExpF -> LPAREN agrega_falso ExpI RPAREN quita_falso
Rule 42    ExpF -> VAR_ID push_var_PilaOperandos pos_arreglo
Rule 43    ExpF -> llama_funcion
Rule 44    VAR_CTE -> VAR_INT push_int_PilaOperandos
Rule 45    VAR_CTE -> VAR_DECIMAL push_decimal_PilaOperandos
Rule 46    VAR_CTE -> VAR_STRING push_string_PilaOperandos
Rule 47    VAR_CTE -> VAR_BOOL push_bool_PilaOperandos
Rule 48    VAR_BOOL -> FALSE
Rule 49    VAR_BOOL -> TRUE
Rule 50    push_int_PilaOperandos -> <empty>
Rule 51    push_decimal_PilaOperandos -> <empty>
Rule 52    push_string_PilaOperandos -> <empty>
Rule 53    push_bool_PilaOperandos -> <empty>
Rule 54    agrega_falso -> <empty>
Rule 55    quita_falso -> <empty>
Rule 56    llama_funcion -> VAR_ID LPAREN agrega_falso checa_funcion_si_existe argumentos RPAREN quita_falso resuelve_llamada_funcion guarda_resultado_funcion
Rule 57    checa_funcion_si_existe -> <empty>
Rule 58    argumentos -> ExpI resuelve_argumentos mas_argumentos
Rule 59    argumentos -> <empty>
Rule 60    mas_argumentos -> COMMA ExpI resuelve_argumentos mas_argumentos
Rule 61    mas_argumentos -> <empty>
Rule 62    resuelve_argumentos -> <empty>
Rule 63    resuelve_llamada_funcion -> <empty>
Rule 64    guarda_resultado_funcion -> <empty>
Rule 65    pos_arreglo -> SLBRACKET checa_var_arr agrega_falso ExpI crea_cuadruplo_ver quita_falso SRBRACKET
Rule 66    pos_arreglo -> <empty>
Rule 67    crea_cuadruplo_ver -> <empty>
Rule 68    checa_var_arr -> <empty>
Rule 69    funciones -> FUNC tipo_funcion VAR_ID LPAREN param RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_cuad funciones
Rule 70    funciones -> <empty>
Rule 71    tipo_funcion -> VOID
Rule 72    tipo_funcion -> Tipo
Rule 73    param -> Tipo VAR_ID pos_commaf
Rule 74    param -> <empty>
Rule 75    pos_commaf -> COMMA Tipo VAR_ID pos_commaf
Rule 76    pos_commaf -> <empty>
Rule 77    agrega_funcion -> <empty>
Rule 78    fin_func_cuad -> <empty>
Rule 79    reg_brack -> Estatutos reg_brack
Rule 80    reg_brack -> <empty>
Rule 81    Estatutos -> Condicion
Rule 82    Estatutos -> Ciclo
Rule 83    Estatutos -> Return
Rule 84    Estatutos -> Asignacion
Rule 85    Estatutos -> Print
Rule 86    Estatutos -> Llamada_Func
Rule 87    Estatutos -> Turtle
Rule 88    Condicion -> IF LPAREN ExpI RPAREN crea_GOTOF LBRACKET reg_brack RBRACKET pos_else llena_cuadruplo_if
Rule 89    crea_GOTOF -> <empty>
Rule 90    llena_cuadruplo_if -> <empty>
Rule 91    pos_else -> ELSE crea_else_cuadruplo LBRACKET reg_brack RBRACKET
Rule 92    pos_else -> <empty>
Rule 93    crea_else_cuadruplo -> <empty>
Rule 94    Return -> RETURN ExpI SEMICOLON resuelve_return
Rule 95    resuelve_return -> <empty>
Rule 96    Print -> PRINT LPAREN ExpI RPAREN SEMICOLON crea_print
Rule 97    crea_print -> <empty>
Rule 98    Llamada_Func -> VAR_ID LPAREN agrega_falso checa_funcion_si_existe argumentos RPAREN quita_falso resuelve_llamada_funcion SEMICOLON checa_void
Rule 99    checa_void -> <empty>
Rule 100   Ciclo -> For
Rule 101   Ciclo -> While
Rule 102   Ciclo -> DoWhile
Rule 103   While -> WHILE guarda_numero_cuadruplo LPAREN ExpI RPAREN crea_GOTOF LBRACKET reg_brack RBRACKET regresa_inicio_while
Rule 104   guarda_numero_cuadruplo -> <empty>
Rule 105   regresa_inicio_while -> <empty>
Rule 106   DoWhile -> DO guarda_numero_cuadruplo LBRACKET reg_brack RBRACKET WHILE LPAREN ExpI RPAREN SEMICOLON crea_GOTOV
Rule 107   crea_GOTOV -> <empty>
Rule 108   For -> FOR LPAREN VAR_ID ASSIGN ExpI SEMICOLON ExpI SEMICOLON VAR_ID Exp_ciclo RPAREN LBRACKET reg_brack RBRACKET
Rule 109   Exp_ciclo -> PLUS VAR_INT
Rule 110   Exp_ciclo -> MINUS VAR_INT
Rule 111   Exp_ciclo -> MULT VAR_INT
Rule 112   Exp_ciclo -> DIV VAR_INT
Rule 113   Exp_ciclo -> PLUSPLUS
Rule 114   Exp_ciclo -> MINUSMINUS
Rule 115   Main -> MAIN agrega_main_funcion LPAREN RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET
Rule 116   agrega_main_funcion -> <empty>
Rule 117   Turtle -> Forward
Rule 118   Turtle -> Right
Rule 119   Turtle -> Left
Rule 120   Turtle -> Circle
Rule 121   Turtle -> Position
Rule 122   Turtle -> IniciaTurtle
Rule 123   Turtle -> TerminaTurtle
Rule 124   Forward -> TUR POINT FORWARD LPAREN ExpI RPAREN SEMICOLON crea_cuadruplo_forward
Rule 125   crea_cuadruplo_forward -> <empty>
Rule 126   Right -> TUR POINT RIGHT LPAREN ExpI RPAREN SEMICOLON crea_cuadruplo_right
Rule 127   crea_cuadruplo_right -> <empty>
Rule 128   Left -> TUR POINT LEFT LPAREN ExpI RPAREN SEMICOLON crea_cuadruplo_left
Rule 129   crea_cuadruplo_left -> <empty>
Rule 130   Circle -> TUR POINT CIRCLE LPAREN ExpI RPAREN SEMICOLON crea_cuadruplo_circle
Rule 131   crea_cuadruplo_circle -> <empty>
Rule 132   Position -> TUR POINT POS LPAREN ExpI COMMA ExpI RPAREN SEMICOLON crea_cuadruplo_pos
Rule 133   crea_cuadruplo_pos -> <empty>
Rule 134   IniciaTurtle -> TUR POINT TURTLE LPAREN RPAREN SEMICOLON crea_cuadruplo_inicia
Rule 135   crea_cuadruplo_inicia -> <empty>
Rule 136   TerminaTurtle -> TUR POINT FINISH LPAREN RPAREN SEMICOLON crea_cuadruplo_termina
Rule 137   crea_cuadruplo_termina -> <empty>

Terminals, with rules where they appear

ASSIGN               : 17 108
BOOL                 : 13
CHAR                 : 12
CIRCLE               : 130
COMMA                : 14 60 75 132
DECIMAL              : 10
DIV                  : 39 112
DO                   : 106
EDJO                 : 1
ELSE                 : 91
EQ                   : 28
FALSE                : 48
FINISH               : 136
FOR                  : 108
FORWARD              : 124
FUNC                 : 69
GE                   : 27
GT                   : 24
IF                   : 88
INT                  : 9
LBRACKET             : 69 88 91 103 106 108 115
LE                   : 26
LEFT                 : 128
LPAREN               : 41 56 69 88 96 98 103 106 108 115 124 126 128 130 132 134 136
LT                   : 23
MAIN                 : 115
MINUS                : 34 110
MINUSMINUS           : 114
MULT                 : 38 111
NE                   : 25
PLUS                 : 33 109
PLUSPLUS             : 113
POINT                : 124 126 128 130 132 134 136
POS                  : 132
PRINT                : 96
RBRACKET             : 69 88 91 103 106 108 115
RET                  : 115
RETURN               : 94
RIGHT                : 126
RPAREN               : 41 56 69 88 96 98 103 106 108 115 124 126 128 130 132 134 136
SEMICOLON            : 1 4 5 17 94 96 98 106 108 108 115 124 126 128 130 132 134 136
SLBRACKET            : 5 65
SRBRACKET            : 5 65
START                : 1
STRING               : 11
TRUE                 : 49
TUR                  : 124 126 128 130 132 134 136
TURTLE               : 134
VAR_DECIMAL          : 45
VAR_ID               : 1 4 5 14 17 42 56 69 73 75 98 108 108
VAR_INT              : 5 44 109 110 111 112
VAR_STRING           : 46
VOID                 : 71
WHILE                : 103 106
ZERO                 : 115
error                : 

Nonterminals, with rules where they appear

Asignacion           : 84
Ciclo                : 82
Circle               : 120
Condicion            : 81
DoWhile              : 102
Estatutos            : 79
ExpF                 : 35 36
ExpI                 : 17 41 58 60 65 88 94 96 103 106 108 108 124 126 128 130 132 132
ExpK                 : 21 22 22 31
ExpT                 : 30 31 36
Exp_ciclo            : 108
For                  : 100
Forward              : 117
IniciaTurtle         : 122
Left                 : 119
Llamada_Func         : 86
Main                 : 1
Operandos            : 22
Position             : 121
Print                : 85
Return               : 83
Right                : 118
TerminaTurtle        : 123
Tipo                 : 4 5 72 73 75
Turtle               : 87
VAR_BOOL             : 47
VAR_CTE              : 40
Vars                 : 1 4 5 69 115
While                : 101
agrega_arr_funcion   : 5
agrega_falso         : 41 56 65 98
agrega_funcion       : 69
agrega_limites_arreglo : 5
agrega_main_funcion  : 115
agrega_var_funcion   : 4
argumentos           : 56 98
checa_funcion_si_existe : 56 98
checa_var_arr        : 65
checa_void           : 98
crea_GOTOF           : 88 103
crea_GOTOV           : 106
crea_cuadruplo_circle : 130
crea_cuadruplo_forward : 124
crea_cuadruplo_inicia : 134
crea_cuadruplo_left  : 128
crea_cuadruplo_pos   : 132
crea_cuadruplo_right : 126
crea_cuadruplo_termina : 136
crea_cuadruplo_ver   : 65
crea_else_cuadruplo  : 91
crea_funcion_global  : 1
crea_primer_cuadruplo : 1
crea_print           : 96
fin_func_cuad        : 69
funciones            : 1 69
guarda_numero_cuadruplo : 103 106
guarda_resultado_funcion : 56
llama_funcion        : 43
llena_cuadruplo_if   : 88
mas_argumentos       : 58 60
mas_vars             : 4 14
param                : 69
pos_MULTDIV          : 36
pos_SUMRES           : 31
pos_arreglo          : 17 42
pos_commaf           : 73 75
pos_else             : 88
program              : 0
push_bool_PilaOperandos : 47
push_decimal_PilaOperandos : 45
push_int_PilaOperandos : 5 44
push_operador_PilaOperadores : 17 22 31 36
push_string_PilaOperandos : 46
push_var_PilaOperandos : 17 42
quita_falso          : 41 56 65 98
reg_brack            : 69 79 88 91 103 106 108 115
regresa_inicio_while : 103
resuelve_argumentos  : 58 60
resuelve_asignacion  : 17
resuelve_factor      : 35 36
resuelve_llamada_funcion : 56 98
resuelve_operadores_relacionales : 21 22
resuelve_return      : 94
resuelve_termino     : 30 31
tipo_funcion         : 69

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . START EDJO VAR_ID crea_primer_cuadruplo crea_funcion_global SEMICOLON Vars funciones Main

    START           shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> START . EDJO VAR_ID crea_primer_cuadruplo crea_funcion_global SEMICOLON Vars funciones Main

    EDJO            shift and go to state 3


state 3

    (1) program -> START EDJO . VAR_ID crea_primer_cuadruplo crea_funcion_global SEMICOLON Vars funciones Main

    VAR_ID          shift and go to state 4


state 4

    (1) program -> START EDJO VAR_ID . crea_primer_cuadruplo crea_funcion_global SEMICOLON Vars funciones Main
    (2) crea_primer_cuadruplo -> .

    SEMICOLON       reduce using rule 2 (crea_primer_cuadruplo -> .)

    crea_primer_cuadruplo          shift and go to state 5

state 5

    (1) program -> START EDJO VAR_ID crea_primer_cuadruplo . crea_funcion_global SEMICOLON Vars funciones Main
    (3) crea_funcion_global -> .

    SEMICOLON       reduce using rule 3 (crea_funcion_global -> .)

    crea_funcion_global            shift and go to state 6

state 6

    (1) program -> START EDJO VAR_ID crea_primer_cuadruplo crea_funcion_global . SEMICOLON Vars funciones Main

    SEMICOLON       shift and go to state 7


state 7

    (1) program -> START EDJO VAR_ID crea_primer_cuadruplo crea_funcion_global SEMICOLON . Vars funciones Main
    (4) Vars -> . Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars
    (5) Vars -> . Tipo VAR_ID SLBRACKET VAR_INT push_int_PilaOperandos SRBRACKET agrega_limites_arreglo agrega_arr_funcion SEMICOLON Vars
    (6) Vars -> .
    (9) Tipo -> . INT
    (10) Tipo -> . DECIMAL
    (11) Tipo -> . STRING
    (12) Tipo -> . CHAR
    (13) Tipo -> . BOOL

    FUNC            reduce using rule 6 (Vars -> .)
    MAIN            reduce using rule 6 (Vars -> .)
    INT             shift and go to state 10
    DECIMAL         shift and go to state 11
    STRING          shift and go to state 12
    CHAR            shift and go to state 13
    BOOL            shift and go to state 14

    Vars                           shift and go to state 8
    Tipo                           shift and go to state 9

state 8

    (1) program -> START EDJO VAR_ID crea_primer_cuadruplo crea_funcion_global SEMICOLON Vars . funciones Main
    (69) funciones -> . FUNC tipo_funcion VAR_ID LPAREN param RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_cuad funciones
    (70) funciones -> .

    FUNC            shift and go to state 16
    MAIN            reduce using rule 70 (funciones -> .)

    funciones                      shift and go to state 15

state 9

    (4) Vars -> Tipo . VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars
    (5) Vars -> Tipo . VAR_ID SLBRACKET VAR_INT push_int_PilaOperandos SRBRACKET agrega_limites_arreglo agrega_arr_funcion SEMICOLON Vars

    VAR_ID          shift and go to state 17


state 10

    (9) Tipo -> INT .

    VAR_ID          reduce using rule 9 (Tipo -> INT .)


state 11

    (10) Tipo -> DECIMAL .

    VAR_ID          reduce using rule 10 (Tipo -> DECIMAL .)


state 12

    (11) Tipo -> STRING .

    VAR_ID          reduce using rule 11 (Tipo -> STRING .)


state 13

    (12) Tipo -> CHAR .

    VAR_ID          reduce using rule 12 (Tipo -> CHAR .)


state 14

    (13) Tipo -> BOOL .

    VAR_ID          reduce using rule 13 (Tipo -> BOOL .)


state 15

    (1) program -> START EDJO VAR_ID crea_primer_cuadruplo crea_funcion_global SEMICOLON Vars funciones . Main
    (115) Main -> . MAIN agrega_main_funcion LPAREN RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET

    MAIN            shift and go to state 19

    Main                           shift and go to state 18

state 16

    (69) funciones -> FUNC . tipo_funcion VAR_ID LPAREN param RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_cuad funciones
    (71) tipo_funcion -> . VOID
    (72) tipo_funcion -> . Tipo
    (9) Tipo -> . INT
    (10) Tipo -> . DECIMAL
    (11) Tipo -> . STRING
    (12) Tipo -> . CHAR
    (13) Tipo -> . BOOL

    VOID            shift and go to state 21
    INT             shift and go to state 10
    DECIMAL         shift and go to state 11
    STRING          shift and go to state 12
    CHAR            shift and go to state 13
    BOOL            shift and go to state 14

    tipo_funcion                   shift and go to state 20
    Tipo                           shift and go to state 22

state 17

    (4) Vars -> Tipo VAR_ID . mas_vars agrega_var_funcion SEMICOLON Vars
    (5) Vars -> Tipo VAR_ID . SLBRACKET VAR_INT push_int_PilaOperandos SRBRACKET agrega_limites_arreglo agrega_arr_funcion SEMICOLON Vars
    (14) mas_vars -> . COMMA VAR_ID mas_vars
    (15) mas_vars -> .

    SLBRACKET       shift and go to state 24
    COMMA           shift and go to state 25
    SEMICOLON       reduce using rule 15 (mas_vars -> .)

    mas_vars                       shift and go to state 23

state 18

    (1) program -> START EDJO VAR_ID crea_primer_cuadruplo crea_funcion_global SEMICOLON Vars funciones Main .

    $end            reduce using rule 1 (program -> START EDJO VAR_ID crea_primer_cuadruplo crea_funcion_global SEMICOLON Vars funciones Main .)


state 19

    (115) Main -> MAIN . agrega_main_funcion LPAREN RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET
    (116) agrega_main_funcion -> .

    LPAREN          reduce using rule 116 (agrega_main_funcion -> .)

    agrega_main_funcion            shift and go to state 26

state 20

    (69) funciones -> FUNC tipo_funcion . VAR_ID LPAREN param RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_cuad funciones

    VAR_ID          shift and go to state 27


state 21

    (71) tipo_funcion -> VOID .

    VAR_ID          reduce using rule 71 (tipo_funcion -> VOID .)


state 22

    (72) tipo_funcion -> Tipo .

    VAR_ID          reduce using rule 72 (tipo_funcion -> Tipo .)


state 23

    (4) Vars -> Tipo VAR_ID mas_vars . agrega_var_funcion SEMICOLON Vars
    (16) agrega_var_funcion -> .

    SEMICOLON       reduce using rule 16 (agrega_var_funcion -> .)

    agrega_var_funcion             shift and go to state 28

state 24

    (5) Vars -> Tipo VAR_ID SLBRACKET . VAR_INT push_int_PilaOperandos SRBRACKET agrega_limites_arreglo agrega_arr_funcion SEMICOLON Vars

    VAR_INT         shift and go to state 29


state 25

    (14) mas_vars -> COMMA . VAR_ID mas_vars

    VAR_ID          shift and go to state 30


state 26

    (115) Main -> MAIN agrega_main_funcion . LPAREN RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET

    LPAREN          shift and go to state 31


state 27

    (69) funciones -> FUNC tipo_funcion VAR_ID . LPAREN param RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_cuad funciones

    LPAREN          shift and go to state 32


state 28

    (4) Vars -> Tipo VAR_ID mas_vars agrega_var_funcion . SEMICOLON Vars

    SEMICOLON       shift and go to state 33


state 29

    (5) Vars -> Tipo VAR_ID SLBRACKET VAR_INT . push_int_PilaOperandos SRBRACKET agrega_limites_arreglo agrega_arr_funcion SEMICOLON Vars
    (50) push_int_PilaOperandos -> .

    SRBRACKET       reduce using rule 50 (push_int_PilaOperandos -> .)

    push_int_PilaOperandos         shift and go to state 34

state 30

    (14) mas_vars -> COMMA VAR_ID . mas_vars
    (14) mas_vars -> . COMMA VAR_ID mas_vars
    (15) mas_vars -> .

    COMMA           shift and go to state 25
    SEMICOLON       reduce using rule 15 (mas_vars -> .)

    mas_vars                       shift and go to state 35

state 31

    (115) Main -> MAIN agrega_main_funcion LPAREN . RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET

    RPAREN          shift and go to state 36


state 32

    (69) funciones -> FUNC tipo_funcion VAR_ID LPAREN . param RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_cuad funciones
    (73) param -> . Tipo VAR_ID pos_commaf
    (74) param -> .
    (9) Tipo -> . INT
    (10) Tipo -> . DECIMAL
    (11) Tipo -> . STRING
    (12) Tipo -> . CHAR
    (13) Tipo -> . BOOL

    RPAREN          reduce using rule 74 (param -> .)
    INT             shift and go to state 10
    DECIMAL         shift and go to state 11
    STRING          shift and go to state 12
    CHAR            shift and go to state 13
    BOOL            shift and go to state 14

    param                          shift and go to state 37
    Tipo                           shift and go to state 38

state 33

    (4) Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON . Vars
    (4) Vars -> . Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars
    (5) Vars -> . Tipo VAR_ID SLBRACKET VAR_INT push_int_PilaOperandos SRBRACKET agrega_limites_arreglo agrega_arr_funcion SEMICOLON Vars
    (6) Vars -> .
    (9) Tipo -> . INT
    (10) Tipo -> . DECIMAL
    (11) Tipo -> . STRING
    (12) Tipo -> . CHAR
    (13) Tipo -> . BOOL

    FUNC            reduce using rule 6 (Vars -> .)
    MAIN            reduce using rule 6 (Vars -> .)
    IF              reduce using rule 6 (Vars -> .)
    RETURN          reduce using rule 6 (Vars -> .)
    VAR_ID          reduce using rule 6 (Vars -> .)
    PRINT           reduce using rule 6 (Vars -> .)
    FOR             reduce using rule 6 (Vars -> .)
    WHILE           reduce using rule 6 (Vars -> .)
    DO              reduce using rule 6 (Vars -> .)
    TUR             reduce using rule 6 (Vars -> .)
    RET             reduce using rule 6 (Vars -> .)
    RBRACKET        reduce using rule 6 (Vars -> .)
    INT             shift and go to state 10
    DECIMAL         shift and go to state 11
    STRING          shift and go to state 12
    CHAR            shift and go to state 13
    BOOL            shift and go to state 14

    Tipo                           shift and go to state 9
    Vars                           shift and go to state 39

state 34

    (5) Vars -> Tipo VAR_ID SLBRACKET VAR_INT push_int_PilaOperandos . SRBRACKET agrega_limites_arreglo agrega_arr_funcion SEMICOLON Vars

    SRBRACKET       shift and go to state 40


state 35

    (14) mas_vars -> COMMA VAR_ID mas_vars .

    SEMICOLON       reduce using rule 14 (mas_vars -> COMMA VAR_ID mas_vars .)


state 36

    (115) Main -> MAIN agrega_main_funcion LPAREN RPAREN . LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET

    LBRACKET        shift and go to state 41


state 37

    (69) funciones -> FUNC tipo_funcion VAR_ID LPAREN param . RPAREN agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_cuad funciones

    RPAREN          shift and go to state 42


state 38

    (73) param -> Tipo . VAR_ID pos_commaf

    VAR_ID          shift and go to state 43


state 39

    (4) Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .

    FUNC            reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    MAIN            reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    IF              reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    RETURN          reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    VAR_ID          reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    PRINT           reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    FOR             reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    WHILE           reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    DO              reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    TUR             reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    RET             reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)
    RBRACKET        reduce using rule 4 (Vars -> Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars .)


state 40

    (5) Vars -> Tipo VAR_ID SLBRACKET VAR_INT push_int_PilaOperandos SRBRACKET . agrega_limites_arreglo agrega_arr_funcion SEMICOLON Vars
    (7) agrega_limites_arreglo -> .

    SEMICOLON       reduce using rule 7 (agrega_limites_arreglo -> .)

    agrega_limites_arreglo         shift and go to state 44

state 41

    (115) Main -> MAIN agrega_main_funcion LPAREN RPAREN LBRACKET . Vars reg_brack RET ZERO SEMICOLON RBRACKET
    (4) Vars -> . Tipo VAR_ID mas_vars agrega_var_funcion SEMICOLON Vars
    (5) Vars -> . Tipo VAR_ID SLBRACKET VAR_INT push_int_PilaOperandos SRBRACKET agrega_limites_arreglo agrega_arr_funcion SEMICOLON Vars
    (6) Vars -> .
    (9) Tipo -> . INT
    (10) Tipo -> . DECIMAL
    (11) Tipo -> . STRING
    (12) Tipo -> . CHAR
    (13) Tipo -> . BOOL

    IF              reduce using rule 6 (Vars -> .)
    RETURN          reduce using rule 6 (Vars -> .)
    VAR_ID          reduce using rule 6 (Vars -> .)
    PRINT           reduce using rule 6 (Vars -> .)
    FOR             reduce using rule 6 (Vars -> .)
    WHILE           reduce using rule 6 (Vars -> .)
    DO              reduce using rule 6 (Vars -> .)
    TUR             reduce using rule 6 (Vars -> .)
    RET             reduce using rule 6 (Vars -> .)
    INT             shift and go to state 10
    DECIMAL         shift and go to state 11
    STRING          shift and go to state 12
    CHAR            shift and go to state 13
    BOOL            shift and go to state 14

    Vars                           shift and go to state 45
    Tipo                           shift and go to state 9

state 42

    (69) funciones -> FUNC tipo_funcion VAR_ID LPAREN param RPAREN . agrega_funcion LBRACKET Vars reg_brack RBRACKET fin_func_cuad funciones
    (77) agrega_funcion -> .

    LBRACKET        reduce using rule 77 (agrega_funcion -> .)

    agrega_funcion                 shift and go to state 46

state 43

    (73) param -> Tipo VAR_ID . pos_commaf
    (75) pos_commaf -> . COMMA Tipo VAR_ID pos_commaf
    (76) pos_commaf -> .

    COMMA           shift and go to state 48
    RPAREN          reduce using rule 76 (pos_commaf -> .)

    pos_commaf                     shift and go to state 47

state 44

    (5) Vars -> Tipo VAR_ID SLBRACKET VAR_INT push_int_PilaOperandos SRBRACKET agrega_limites_arreglo . agrega_arr_funcion SEMICOLON Vars
    (8) agrega_arr_funcion -> .

    SEMICOLON       reduce using rule 8 (agrega_arr_funcion -> .)

    agrega_arr_funcion             shift and go to state 49

state 45

    (115) Main -> MAIN agrega_main_funcion LPAREN RPAREN LBRACKET Vars . reg_brack RET ZERO SEMICOLON RBRACKET
    (79) reg_brack -> . Estatutos reg_brack
    (80) reg_brack -> .
    (81) Estatutos -> . Condicion
    (82) Estatutos -> . Ciclo
    (83) Estatutos -> . Return
    (84) Estatutos -> . Asignacion
    (85) Estatutos -> . Print
    (86) Estatutos -> . Llamada_Func
    (87) Estatutos -> . Turtle
    (88) Condicion -> . IF LPAREN ExpI RPAREN crea_GOTOF LBRACKET reg_brack RBRACKET pos_else llena_cuadruplo_if
    (100) Ciclo -> . For
    (101) Ciclo -> . While
    (102) Ciclo -> . DoWhile
    (94) Return -> . RETURN ExpI SEMICOLON resuelve_return
    (17) Asignacion -> . VAR_ID push_var_PilaOperandos pos_arreglo ASSIGN push_operador_PilaOperadores ExpI SEMICOLON resuelve_asignacion
    (96) Print -> . PRINT LPAREN ExpI RPAREN SEMICOLON crea_print
    (98) Llamada_Func -> . VAR_ID LPAREN agrega_falso checa_funcion_si_existe argumentos RPAREN quita_falso resuelve_llamada_funcion SEMICOLON checa_void
    (117) Turtle -> . Forward
    (118) Turtle -> . Right
    (119) Turtle -> . Left
    (120) Turtle -> . Circle
    (121) Turtle -> . Position
    (122) Turtle -> . IniciaTurtle
    (123) Turtle -> . TerminaTurtle
    (108) For -> . FOR LPAREN VAR_ID ASSIGN ExpI SEMICOLON ExpI SEMICOLON VAR_ID Exp_ciclo RPAREN LBRACKET reg_brack RBRACKET
    (103) While -> . WHILE guarda_numero_cuadruplo LPAREN ExpI RPAREN crea_GOTOF LBRACKET reg_brack RBRACKET regresa_inicio_while
    (106) DoWhile -> . DO guarda_numero_cuadruplo LBRACKET reg_brack RBRACKET WHILE LPAREN ExpI RPAREN SEMICOLON crea_GOTOV
    (124) Forward -> . TUR POINT FORWARD LPAREN ExpI RPAREN SEMICOLON crea_cuadruplo_forward
    (126) Right -> . TUR POINT RIGHT LPAREN ExpI RPAREN SEMICOLON crea_cuadruplo_right
    (128) Left -> . TUR POINT LEFT LPAREN ExpI RPAREN SEMICOLON crea_cuadruplo_left
    (130) Circle -> . TUR POINT CIRCLE LPAREN ExpI RPAREN SEMICOLON crea_cuadruplo_circle
    (132) Position -> . TUR POINT POS LPAREN ExpI COMMA ExpI RPAREN SEMICOLON crea_cuadruplo_pos
    (134) IniciaTurtle -> . TUR POINT TURTLE LPAREN RPAREN SEMICOLON crea_cuadruplo_inicia
    (136) TerminaTurtle -> . TUR POINT FINISH LPAREN RPAREN SEMICOLON crea_cuadruplo_termina

    RET             reduce using rule 80 (reg_brack -> .)
    IF              shift and go to state 59
    RETURN          shift and go to state 63
    VAR_ID          shift and go to state 64
    PRINT           shift and go to state 65
    FOR             shift and go to state 73
    WHILE           shift and go to state 74
    DO              shift and go to state 75
    TUR             shift and go to state 76
